# handbrake-batch-compressor

./: .gitignore  CHANELOG.md  Makefile  README.md  main.py  pyproject.toml  pyrightconfig.json  ruff.toml
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: release.yaml
batch_video_compressor/: main.py
batch_video_compressor/src/cli/: cli_guards.py  guide.py  statistics_logger.py
batch_video_compressor/src/compression/: compression_manager.py  handbrake_compressor.py
batch_video_compressor/src/utils/: smart_filters.py  third_party_installers.py
handbrake_batch_compressor/: main.py
handbrake_batch_compressor/src/cli/: logger.py  statistics_logger.py
handbrake_batch_compressor/src/compression/: compression_manager.py  handbrake_compressor.py
handbrake_batch_compressor/src/errors/: handbrake_cli_exceptions.py
handbrake_batch_compressor/src/utils/: ffmpeg_helpers.py  third_party_installers.py
src/: batch_video_compressor.py  cli_guards.py  cli_helpers.py  compression_statistics.py  ffmpeg_helpers.py  file_utils.py  files.py  handbrake_cli_output_capturer.py  logger.py  smart_filters.py  software_installers.py  third_party_installers.py  videofiles_traverser.py
src/cli/: cli_guards.py  guide.py  handbrake_cli_output_capturer.py  logger.py  statistics_logger.py
src/compression/: compression_manager.py  handbrake_compressor.py
src/utils/: ffmpeg_helpers.py  smart_filters.py  third_party_installers.py
test/: compression_statistics_test.py  conftest.py  ffmpeg_helpers_test.py  file_utils_test.py  files_test.py  handbrake_cli_output_capturer_test.py  video_files_traverser_test.py
