[project]
name = "batch-video-compressor"
version = "0.1.0"
description = "Simple script to traverse all the video files and compress them to optimize disk space for large files"
authors = [
    {name = "Roman Berezkin",email = "Glitchy-Sheep@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer (>=0.15.1,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
