[project]
name = "batch-video-compressor"
version = "0.4.0"
description = "Simple script to traverse all the video files and compress them to optimize disk space for large files"
authors = [
    { name = "Roman Berezkin", email = "Glitchy-Sheep@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "typer (>=0.15.1,<0.16.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "av (>=14.1.0,<15.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
]


[project.scripts]
batch-video-compressor = "batch_video_compressor.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pyinstaller = "^6.11.1"
ruff = "^0.9.4"
coverage = "^7.6.10"

[tool.poetry]
name = "batch-video-compressor"
version = "0.4.0"
description = "Simple script to traverse all the video files and compress them to optimize disk space for large files"
authors = ["Roman Berezkin"]
readme = "README.md"

packages = [{ include = "batch_video_compressor" }]
